--- a/.gitignore
+++ b/.gitignore
@@ -188,3 +188,8 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+
+project.lock.json
+*.Production.json
+*.pubxml
+.vs/
