--- a/src/IdentityTutorial.Web/project.lock.json
+++ b/src/IdentityTutorial.Web/project.lock.json
@@ -4303,7 +4303,7 @@
       "Microsoft.AspNet.Http >= 1.0.0-beta5",
       "Microsoft.AspNet.StaticFiles >= 1.0.0-beta5",
       "IdentityTutorial >= 1.0.0-*",
-      "IdentityTutorial.Store >= 1.0.0-*",
+      "IdentityTutorial.Data >= 1.0.0-*",
       "IdentityTutorial.Core >= 1.0.0-*",
       "Microsoft.Framework.Configuration.Json >= 1.0.0-beta5",
       "Microsoft.AspNet.Cors >= 1.0.0-beta5"
