--- a/src/IdentityTutorial/project.json
+++ b/src/IdentityTutorial/project.json
@@ -11,7 +11,7 @@
         "Microsoft.Framework.OptionsModel": "1.0.0-beta5",
         "Microsoft.AspNet.Identity": "3.0.0-beta5",
         "IdentityTutorial.Core": "1.0.0-*",
-        "IdentityTutorial.Store": "1.0.0-*"
+        "IdentityTutorial.Data": "1.0.0-*"
     },
 
     "frameworks": {
